--- a/index.html
+++ b/index.html
@@ -51,22 +51,44 @@
     h2 {
       color: #005f73;
     }
-    iframe, video {
-      width: 100%;
-      height: 480px;
-      border: none;
-    }
     footer {
       background-color: #005f73;
       color: white;
       text-align: center;
       padding: 1rem;
     }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+    }
     .placeholder {
       text-align: center;
       color: #666;
       font-style: italic;
       padding-top: 1rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #005f73;
+      color: white;
+      border: none;
+      padding: 0.75rem;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0a9396;
     }
   </style>
 </head>
@@ -89,56 +111,62 @@
 
   <div class="section" id="about">
     <h2>About Our Church</h2>
-    <p>We are a community dedicated to teaching and preaching Christianity, following the sacred traditions of the Tigray Orthodox Tewahedo Church.</p>
+    <p>Welcome to the Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. We are a community dedicated to teaching and preaching Christianity, following the rich traditions of the Tigray Orthodox Tewahedo faith.</p>
   </div>
 
   <div class="section" id="mission">
     <h2>Mission</h2>
-    <p>Our mission is to spread the Gospel, foster spiritual growth, and provide compassionate service to our congregation and neighbors.</p>
+    <p>Our mission is to share the Gospel of Christ, foster spiritual growth, and serve our community in the love of God. We seek to build a welcoming environment where faith, fellowship, and worship bring us closer to God and each other.</p>
   </div>
 
   <div class="section" id="services">
     <h2>Service Schedule</h2>
+    <p>We hold Divine Liturgy and worship services every Sunday morning and on all major holiday days according to the Tigray Orthodox Tewahedo calendar.</p>
     <ul>
       <li><strong>Sunday Divine Liturgy:</strong> 10:00 AM</li>
-      <li><strong>Holiday Services:</strong> Times vary—please contact the church office.</li>
+      <li><strong>Holiday Services:</strong> Times vary—please refer to announcements or contact the church office.</li>
     </ul>
   </div>
 
   <div class="section" id="events">
-    <h2>Feast Day Celebrations & Events</h2>
+    <h2>Feast Day Celebrations</h2>
     <ul>
-      <li><strong>Sene Mikael:</strong> June 19</li>
-      <li><strong>Hidar Mikael:</strong> November 21</li>
-      <li><strong>Saint Yared Feast Day:</strong> May 19</li>
+      <li><strong>Sene Mikael:</strong> June 19 (annual celebration of Saint Michael)</li>
+      <li><strong>Hidar Mikael:</strong> November 21 (major feast for Saint Michael)</li>
+      <li><strong>Saint Yared Feast Day:</strong> May 19 (honoring the composer of Tewahedo hymns)</li>
     </ul>
-    <iframe src="https://calendar.google.com/calendar/embed?src=your_calendar_id@group.calendar.google.com&ctz=America/New_York"></iframe>
-    <div class="placeholder">Our upcoming church events will be shown here.</div>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <div class="placeholder">If no events appear, please check back soon. Upcoming events will be displayed here.</div>
   </div>
 
   <div class="section" id="gallery">
     <h2>Photo Gallery</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
-    <div class="placeholder">Photos from our worship and community events.</div>
+    <div class="placeholder">Photos from our celebrations and community gatherings will appear here.</div>
   </div>
 
   <div class="section" id="media">
     <h2>Media – Sermons & Choir</h2>
-    <iframe src="https://www.youtube.com/embed/videoseries?list=YOUR_PLAYLIST_ID" allowfullscreen></iframe>
-    <div class="placeholder">Stream our latest liturgies and choir performances.</div>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <div class="placeholder">Audio and video recordings of sermons and choir will be available soon.</div>
   </div>
 
   <div class="section" id="contact">
     <h2>Contact Us</h2>
     <p><strong>Address:</strong> 410 Melvin Ave, Catonsville, MD 21228</p>
-    <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
     <p><strong>Phone:</strong> (410) 555-1234</p>
-    <p><strong>Website:</strong> <a href="https://saint-michael-saint-yared.github.io/">Visit Our Site</a></p>
-    <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed"></iframe>
+    <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
+    <p><strong>Website:</strong> <a href="https://saint-michael-saint-yared.github.io/">Visit Live Site</a></p>
+    <form action="https://formspree.io/f/mjkrvvne" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </div>
 
   <footer>
-    <p>&copy; 2025 Saint Michael and Saint Yared Church. All rights reserved.</p>
+    <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
   </footer>
 </body>
 </html>
