--- a/index.html
+++ b/index.html
@@ -1,1 +1,184 @@
-<!DOCTYPE html><html><head><title>Saint Michael Church</title></head><body><h1>Welcome</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
+  
+  <!-- SEO & Social Media Meta Tags -->
+  <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. Join our community in faith and worship." />
+  <meta property="og:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore" />
+  <meta property="og:description" content="Welcome to our church community in Baltimore, following the rich traditions of the Tigray Orthodox Tewahedo faith." />
+  <meta property="og:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" />
+  <meta property="og:url" content="https://saint-michael-saint-yared.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Saint Michael and Saint Yared Church" />
+  <meta name="twitter:description" content="A welcoming Tewahedo faith community in Baltimore." />
+  <meta name="twitter:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" />
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f5ef;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #005f73;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header img {
+      width: 240px;
+      height: auto;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+    nav {
+      background-color: #0a9396;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 1rem 0;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      padding: 2rem;
+      background-color: white;
+      margin: 1.5rem auto;
+      max-width: 960px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    h2 {
+      color: #005f73;
+    }
+    footer {
+      background-color: #005f73;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+    }
+    .placeholder {
+      text-align: center;
+      color: #666;
+      font-style: italic;
+      padding-top: 1rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      background-color: #0a9396;
+      color: white;
+      border: none;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #007780;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo" />
+    <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</h1>
+    <p>410 Melvin Ave, Catonsville, MD 21228</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#mission">Mission</a>
+    <a href="#services">Services</a>
+    <a href="#events">Events</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#media">Media</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="section" id="about">
+    <h2>About Our Church</h2>
+    <p>Welcome to the Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. We are a community dedicated to teaching and preaching Christianity, following the rich traditions of the Tigray Orthodox Tewahedo faith.</p>
+  </div>
+
+  <div class="section" id="mission">
+    <h2>Mission</h2>
+    <p>Our mission is to share the Gospel of Christ, foster spiritual growth, and serve our community in the love of God. We seek to build a welcoming environment where faith, fellowship, and worship bring us closer to God and each other.</p>
+  </div>
+
+  <div class="section" id="services">
+    <h2>Service Schedule</h2>
+    <ul>
+      <li><strong>Sunday Divine Liturgy:</strong> 10:00 AM</li>
+      <li><strong>Holiday Services:</strong> Times vary—please refer to announcements or contact the church office.</li>
+    </ul>
+  </div>
+
+  <div class="section" id="events">
+    <h2>Feast Day Celebrations</h2>
+    <ul>
+      <li><strong>Sene Mikael:</strong> June 19</li>
+      <li><strong>Hidar Mikael:</strong> November 21</li>
+      <li><strong>Saint Yared:</strong> May 19</li>
+    </ul>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <div class="placeholder">Upcoming events will be displayed here.</div>
+  </div>
+
+  <div class="section" id="gallery">
+    <h2>Photo Gallery</h2>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
+    <div class="placeholder">Photos from community gatherings will appear here.</div>
+  </div>
+
+  <div class="section" id="media">
+    <h2>Media – Sermons & Choir</h2>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <div class="placeholder">Audio/video content coming soon.</div>
+  </div>
+
+  <div class="section" id="contact">
+    <h2>Contact Us</h2>
+    <form action="https://formspree.io/f/mjkrvvne" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+    <p>Email: <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
+    <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed"></iframe>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Saint Michael and Saint Yared Church. All rights reserved.</p>
+  </footer>
+</body>
+</html>
