--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
-  
-  <!-- SEO & Social Media Meta Tags -->
-  <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. Join our community in faith and worship." />
-  <meta property="og:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore" />
-  <meta property="og:description" content="Welcome to our church community in Baltimore, following the rich traditions of the Tigray Orthodox Tewahedo faith." />
-  <meta property="og:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" />
-  <meta property="og:url" content="https://saint-michael-saint-yared.github.io/" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Saint Michael and Saint Yared Church" />
-  <meta name="twitter:description" content="A welcoming Tewahedo faith community in Baltimore." />
-  <meta name="twitter:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" />
-
+  <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. Join our community in faith and worship.">
+  <meta name="author" content="Saint Michael and Saint Yared Church">
+  <meta property="og:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore">
+  <meta property="og:description" content="Welcome to our church community in Baltimore, following the rich traditions of the Tigray Orthodox Tewahedo faith.">
+  <meta property="og:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg">
+  <meta property="og:url" content="https://saint-michael-saint-yared.github.io/">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="favicon.ico">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -82,34 +76,30 @@
       font-style: italic;
       padding-top: 1rem;
     }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.75rem;
-      font-size: 1rem;
+    form input, form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 8px;
+      margin-bottom: 12px;
       border: 1px solid #ccc;
-      border-radius: 8px;
+      border-radius: 6px;
     }
-    button {
+    form button {
       background-color: #0a9396;
       color: white;
+      padding: 10px 20px;
       border: none;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #007780;
+    form button:hover {
+      background-color: #007d85;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo" />
+    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo">
     <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</h1>
     <p>410 Melvin Ave, Catonsville, MD 21228</p>
   </header>
@@ -136,6 +126,7 @@
 
   <div class="section" id="services">
     <h2>Service Schedule</h2>
+    <p>We hold Divine Liturgy and worship services every Sunday morning and on all major holiday days according to the Tigray Orthodox Tewahedo calendar.</p>
     <ul>
       <li><strong>Sunday Divine Liturgy:</strong> 10:00 AM</li>
       <li><strong>Holiday Services:</strong> Times vary—please refer to announcements or contact the church office.</li>
@@ -145,40 +136,46 @@
   <div class="section" id="events">
     <h2>Feast Day Celebrations</h2>
     <ul>
-      <li><strong>Sene Mikael:</strong> June 19</li>
-      <li><strong>Hidar Mikael:</strong> November 21</li>
-      <li><strong>Saint Yared:</strong> May 19</li>
+      <li><strong>Sene Mikael:</strong> June 19 (annual celebration of Saint Michael)</li>
+      <li><strong>Hidar Mikael:</strong> November 21 (major feast for Saint Michael)</li>
+      <li><strong>Saint Yared Feast Day:</strong> May 19 (honoring the composer of Tewahedo hymns)</li>
     </ul>
     <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">Upcoming events will be displayed here.</div>
+    <div class="placeholder">If no events appear, please check back soon. Upcoming events will be displayed here.</div>
   </div>
 
   <div class="section" id="gallery">
     <h2>Photo Gallery</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
-    <div class="placeholder">Photos from community gatherings will appear here.</div>
+    <div class="placeholder">Photos from our celebrations and community gatherings will appear here.</div>
   </div>
 
   <div class="section" id="media">
     <h2>Media – Sermons & Choir</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">Audio/video content coming soon.</div>
+    <div class="placeholder">Audio and video recordings of sermons and choir will be available soon.</div>
   </div>
 
   <div class="section" id="contact">
     <h2>Contact Us</h2>
     <form action="https://formspree.io/f/mjkrvvne" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <label for="name">Name:</label>
+      <input type="text" name="name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" name="email" required>
+
+      <label for="message">Message:</label>
+      <textarea name="message" rows="5" required></textarea>
+
       <button type="submit">Send Message</button>
     </form>
-    <p>Email: <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
-    <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed"></iframe>
+    <p><strong>Address:</strong> 410 Melvin Ave, Catonsville, MD 21228</p>
+    <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
   </div>
 
   <footer>
-    <p>&copy; 2025 Saint Michael and Saint Yared Church. All rights reserved.</p>
+    <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
   </footer>
 </body>
 </html>
