--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
 
-  <!-- FAVICON (optional; will show your logo in browser tab) -->
+  <!-- FAVICON (optional) -->
   <link rel="icon" href="saint_michael_logo.jpg" type="image/jpeg">
 
-  <!-- SEARCH ENGINE META (you can add more later if desired) -->
+  <!-- META DESCRIPTION (optional) -->
   <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore – community, worship, and fellowship.">
 
   <style>
@@ -58,7 +58,6 @@
     h2 {
       color: #005f73;
     }
-    /* Ensure iframes fill their container */
     iframe {
       width: 100%;
       height: 450px;
@@ -148,24 +147,21 @@
   <!-- EVENTS SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="events">
     <h2>Feast Day Celebrations</h2>
-    <!-- Drive folder embed: shows the contents of that folder in “list” view -->
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1L0oQaIDHMU4MImdsMwnbVCtKDnN89oQm#list"></iframe>
     <div class="placeholder">If no events appear, please check back soon.</div>
   </div>
 
   <!-- GALLERY SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="gallery">
     <h2>Photo Gallery</h2>
-    <!-- Drive folder embed: shows the contents of that folder in “grid” view -->
-    <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1L26YiiSXDKBSSGMGenNya0LbLG_3z_yj#grid"></iframe>
     <div class="placeholder">Photos from celebrations and community events will appear here.</div>
   </div>
 
   <!-- MEDIA SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="media">
     <h2>Media – Sermons &amp; Choir</h2>
-    <!-- Drive folder embed: shows the contents of that folder in “list” view -->
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1L2D9s31FnflGP0G_R1uqqMBFzmc8CvZM#list"></iframe>
     <div class="placeholder">Audio and video sermons will be available soon.</div>
   </div>
 
@@ -176,7 +172,6 @@
     <p><strong>Phone:</strong> (410) 555-1234</p>
     <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
 
-    <!-- FORMSPREE CONTACT FORM (unchanged) -->
     <form action="https://formspree.io/f/mjkrvvne" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
@@ -184,7 +179,6 @@
       <button type="submit">Send Message</button>
     </form>
 
-    <!-- GOOGLE MAP (unchanged) -->
     <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed"></iframe>
   </div>
 
